--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-text-box-item-content">
-                                                        <p>Expert consultancy to help you leverage the Backward and Regional Upliftment Programme for Youth (BRUPY)</p>
+                                                        <p>Expert consultancy to help you leverage the *Backward and Regional Upliftment Programme for Youth (BRUPY)</p>
                                                     </div>
                                                 </div>
                                             </div>
