--- a/about-us.html
+++ b/about-us.html
@@ -468,7 +468,7 @@
                               style="font-size: 18px"
                             >
                               <p>
-                                With over 7 years of dedicated experience, 360
+                                With over 10+ years of dedicated experience, 360
                                 Subsidy Team offers a comprehensive suite of
                                 services to businesses in Rajasthan. Our
                                 expertise spans strategy, consulting, quick
