--- a/index.html
+++ b/index.html
@@ -1109,6 +1109,29 @@
     //     console.warn("Revolution Slider: Multiple jQuery versions loaded.");
     // }
     </script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyCsjLbBjO-U9ryluhQeWYEg2qFniLHuGUA",
+          authDomain: "subsidy-37f9c.firebaseapp.com",
+          projectId: "subsidy-37f9c",
+          storageBucket: "subsidy-37f9c.firebasestorage.app",
+          messagingSenderId: "368678601154",
+          appId: "1:368678601154:web:5098672292b965b2d8165b",
+          measurementId: "G-8RVZ9E7WXE"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 
 
 </body></html>
