--- a/brupy.html
+++ b/brupy.html
@@ -57,7 +57,7 @@
           <div class="financity-logo financity-item-pdlr">
             <div class="financity-logo-inner">
               <a href="index.html"
-                ><img src="upload/logo-3.png" alt="" width="263" height="52"
+                ><img src="upload/360_logo4.svg" alt="" width="263" height="52"
               /></a>
             </div>
           </div>
@@ -135,7 +135,7 @@
                 <div class="financity-logo-inner">
                   <a href="index.html"
                     ><img
-                      src="upload/logo-3.png"
+                      src="upload/360_logo4.svg"
                       alt=""
                       width="263"
                       height="52"
@@ -643,7 +643,7 @@
               >
                 <div id="text-2" class="widget widget_text financity-widget">
                   <div class="textwidget">
-                    <p><img src="upload/footer-logo.png" alt="" /></p>
+                    <p><img src="upload/360_logo4.svg" alt="" /></p>
                     <p>
                       <i class="fa fa-location-arrow" id="i_f47b_5"></i> <a
                         href="https://www.google.com/maps/place/26%C2%B053'04.0%22N+75%C2%B044'05.0%22E/@26.8844357,75.7321434,17z"
