message text changes

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 
 
 
-<style>
-    
-</style>
+
 
 </head>
 <body>
 
 
-<a href="https://wa.me/919772959105?text=Hi%20there%2C%20I%20am%20interested%20in%20your%20services"
+<a href="https://wa.me/919772959105?text=Hi%20there!%20Thank%20you%20for%20reaching%20out%20to%20360%20Subsidy.%0AWe're%20here%20to%20guide%20you%20through%20the%20various%20government%20subsidy%20programs%20available%20for%20your%20business.%0APlease%20let%20us%20know%20how%20we%20can%20help%20you%20today%3F"
    class="whatsapp-float"
    target="_blank"
    title="Chat with us on WhatsApp">
