images uploaded and address changed

--- a/about-us.html
+++ b/about-us.html
@@ -552,10 +552,11 @@
                             >
                               <div
                                 class="gdlr-core-personnel-list-image gdlr-core-media-image gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover"
+                                
                               >
                                 <a href="#"
                                   ><img
-                                    src="upload/personnel-1.jpg"
+                                    src="upload/RK_img.jpg"
                                     alt=""
                                     width="600"
                                     height="465"
@@ -595,7 +596,7 @@
                               >
                                 <a href="#"
                                   ><img
-                                    src="upload/personnel-2.jpg"
+                                    src="upload/dk1_img.jpg"
                                     alt=""
                                     width="600"
                                     height="465"
@@ -999,7 +1000,7 @@
                 <div id="text-2" class="widget widget_text financity-widget">
                    <div class="textwidget">
                                     <p><img src="upload/360_logo4.svg" alt=""></p>
-                                    <p><i class="fa fa-location-arrow" id="i_f47b_5"></i> <a href="https://www.google.com/maps/place/26%C2%B053'04.0%22N+75%C2%B044'05.0%22E/@26.8844357,75.7321434,17z" target="_blank" rel="noopener noreferrer">124, Vardhaman Nagar, Near 200 Feet Road, Ajmer Road, Jaipur, Rajasthan – 302019</a>
+                                    <p><i class="fa fa-location-arrow" id="i_f47b_5"></i> <a href="https://www.google.com/maps/place/26%C2%B053'29.1%22N+75%C2%B046'21.4%22E/@26.8914215,75.7700362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d26.8914167!4d75.7726111?entry=ttu&g_ep=EgoyMDI1MTAwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">605, 6th Floor, Okay Plus Tower, Big Benn, New Sanganer Road, Swags Farm, Sodala, Jaipur – 302019</a>
                                         <br> <span class="gdlr-core-space-shortcode" id="span_f47b_8"></span> <i class="fa fa-phone" id="i_f47b_6"></i> <a href="tel:+919772959105" target="_blank" rel="noopener noreferrer">+91-9772959105</a>
                                         <br> <span class="gdlr-core-space-shortcode" id="span_f47b_9"></span> <i class="fa fa-envelope-open-o" id="i_f47b_7"></i> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=360subsidy@gmail.com" target="_blank" rel="noopener noreferrer">360subsidy@gmail.com</a>
 </p>
