--- a/wearhouse.html
+++ b/wearhouse.html
@@ -647,14 +647,7 @@
                 <div id="text-2" class="widget widget_text financity-widget">
                   <div class="textwidget">
                     <p><img src="upload/360_logo4.svg" alt="" /></p>
-                    <p>
-                      <i class="fa fa-location-arrow" id="i_f47b_5"></i> <a
-                        href="https://www.google.com/maps/place/26%C2%B053'04.0%22N+75%C2%B044'05.0%22E/@26.8844357,75.7321434,17z"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >124, Vardhaman Nagar, Near 200 Feet Road, Ajmer Road,
-                        Jaipur, Rajasthan – 302019</a
-                      >
+                 <p><i class="fa fa-location-arrow" id="i_f47b_5"></i> <a href="https://www.google.com/maps/place/26%C2%B053'29.1%22N+75%C2%B046'21.4%22E/@26.8914215,75.7700362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d26.8914167!4d75.7726111?entry=ttu&g_ep=EgoyMDI1MTAwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">605, 6th Floor, Okay Plus Tower, Big Benn, New Sanganer Road, Swags Farm, Sodala, Jaipur – 302019</a>
                       <br />
                       <span
                         class="gdlr-core-space-shortcode"
